Just some simple update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,12 @@ name = "tls-interceptor"
 version = "0.1.0"
 authors = ["Jethro Shuwen Sun <jethrosun@ccs.neu.edu>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 "rustls" = "*"
 pcap-file = "0.10.0"
 etherparse = "0.8.0"
 smoltcp = ">=0.5.0"
+
+[badges]
