--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,12 @@ license = "MIT OR Apache-2.0"
 pcap-file = "0.10.0"
 etherparse = "0.8.0"
 smoltcp = ">=0.5.0"
+clap = "*"
+failure = "*"
+futures = "*"
+h2 = "*"
+tokio-io = "*"
+pcap = "*"
+env_logger = "*"
 
 [badges]
