revamp rdr example

--- a/rdr-example/Cargo.toml
+++ b/rdr-example/Cargo.toml
@@ -11,4 +11,4 @@ failure = "*"
 tiny_http = "0.6"
 base64 = "0.10"
 headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
-# headless_chrome = "0.9"
+serde_json = "*"
