--- a/rdr-example/Cargo.toml
+++ b/rdr-example/Cargo.toml
@@ -10,5 +10,6 @@ edition = "2018"
 failure = "*"
 tiny_http = "0.6"
 base64 = "0.10"
-headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
+# headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
+headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-rdr" }
 serde_json = "*"
