--- a/rdr-example/Cargo.toml
+++ b/rdr-example/Cargo.toml
@@ -11,5 +11,7 @@ failure = "*"
 tiny_http = "0.6"
 base64 = "0.10"
 # headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
-headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-rdr" }
+# headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-rdr" }
+headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
+# headless_chrome = "0.9"
 serde_json = "*"
