--- a/exec_rdr_wd/Cargo.toml
+++ b/exec_rdr_wd/Cargo.toml
@@ -12,6 +12,6 @@ tiny_http = "0.6"
 base64 = "0.10"
 # headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn" }
 # headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-rdr" }
-headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-0.9" }
+headless_chrome = { git = "https://github.com/jethrosun/rust-headless-chrome", branch = "pvn-july-20" }
 # headless_chrome = "0.9"
 serde_json = "*"
